# openbb_tushare

./: .gitignore  LICENSE  pyproject.toml
.trae/specs/implement-adjustment/: checklist.md  spec.md  tasks.md
docs/: openbb_tushare.ipynb
docs/superpowers/plans/: 2026-05-11-market-data-interfaces.md
docs/superpowers/specs/: 2026-05-11-market-data-interfaces-design.md
openbb_tushare/: provider.py
openbb_tushare/models/: equity_historical.py  etf_historical.py  index_constituents.py  index_historical.py  index_info.py  index_search.py
openbb_tushare/utils/: tools.py  ts_equity_historical.py  ts_etf_historical.py  ts_helpers.py  ts_index_constituents.py  ts_index_historical.py
tests/: test_equity_historical_adjustment.py  test_etf_historical.py  test_index_constituents.py  test_index_historical.py  test_index_info.py  test_index_search.py  test_market_data_integration.py
