[tool.poetry]
name = "openbb-tushare"
version = "1.2.0"
description = "OpenBB extension for Tushare"
authors = ["Roger Ye <shugaoye@yahoo.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_tushare" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
openbb = "4.7.1"
openbb-core = { version = "^1.6.8" }
tushare = "^1.4.29"
chinese_calendar = "^1.11.0"
mysharelib = "^1.0.5"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.6.6" }
ipykernel = "^7.2.0"
pytest = "^9.0.3"
pytest-freezer = "^0.4.9"
# Replace pytest-freezegun with pytest-freezer for Python 3.13 compatibility

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
tushare = "openbb_tushare.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
tushare = "openbb_tushare.provider:provider"
